--- a/MyPad/Views/Dialogs/ChangeEncodingDialog.xaml
+++ b/MyPad/Views/Dialogs/ChangeEncodingDialog.xaml
@@ -13,7 +13,8 @@
              xmlns:root="clr-namespace:MyPad"
              xmlns:behaviors="clr-namespace:MyPad.Views.Behaviors"
              mc:Ignorable="d"
-             p:ViewModelLocator.AutoWireViewModel="True">
+             p:ViewModelLocator.AutoWireViewModel="True"
+             Loaded="Dialog_Loaded">
 
     <p:Dialog.WindowStyle>
         <Style TargetType="{x:Type m:MetroWindow}" BasedOn="{StaticResource App.Dialog}">
@@ -22,6 +23,9 @@
     </p:Dialog.WindowStyle>
 
     <i:Interaction.Triggers>
+        <i:KeyTrigger Key="Enter">
+            <i:InvokeCommandAction Command="{Binding OKCommand, Mode=OneTime}"/>
+        </i:KeyTrigger>
         <i:KeyTrigger Key="Esc">
             <i:InvokeCommandAction Command="{Binding CancelCommand, Mode=OneTime}"/>
         </i:KeyTrigger>
@@ -29,7 +33,7 @@
 
     <Grid Margin="20 10 20 15" ge:GridEx.RowDefinition="*, 10, Auto">
         <Grid Grid.Row="0" VerticalAlignment="Center">
-            <ComboBox ItemsSource="{x:Static root:Constants.ENCODINGS}" SelectedValue="{Binding Encoding.Value, Mode=TwoWay}" m:TextBoxHelper.Watermark="{le:Loc Label_Encoding}" m:TextBoxHelper.UseFloatingWatermark="True">
+            <ComboBox x:Name="Encoding" ItemsSource="{x:Static root:Constants.ENCODINGS}" SelectedValue="{Binding Encoding.Value, Mode=TwoWay}" m:TextBoxHelper.Watermark="{le:Loc Label_Encoding}" m:TextBoxHelper.UseFloatingWatermark="True">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{qc:MultiBinding '$P0 + \' - \' + $P1', P0={Binding CodePage, Mode=OneWay}, P1={Binding EncodingName, Mode=OneWay}}"/>
