--- a/MyPad/Views/Dialogs/ChangeLineDialog.xaml
+++ b/MyPad/Views/Dialogs/ChangeLineDialog.xaml
@@ -12,7 +12,8 @@
              xmlns:ge="clr-namespace:SourceChord.GridExtra;assembly=GridExtra.Wpf"
              xmlns:behaviors="clr-namespace:MyPad.Views.Behaviors"
              mc:Ignorable="d"
-             p:ViewModelLocator.AutoWireViewModel="True">
+             p:ViewModelLocator.AutoWireViewModel="True"
+             Loaded="Dialog_Loaded">
 
     <p:Dialog.WindowStyle>
         <Style TargetType="{x:Type m:MetroWindow}" BasedOn="{StaticResource App.Dialog}">
@@ -21,6 +22,9 @@
     </p:Dialog.WindowStyle>
 
     <i:Interaction.Triggers>
+        <i:KeyTrigger Key="Enter">
+            <i:InvokeCommandAction Command="{Binding OKCommand, Mode=OneTime}"/>
+        </i:KeyTrigger>
         <i:KeyTrigger Key="Esc">
             <i:InvokeCommandAction Command="{Binding CancelCommand, Mode=OneTime}"/>
         </i:KeyTrigger>
@@ -28,7 +32,7 @@
 
     <Grid Margin="20 10 20 15" ge:GridEx.RowDefinition="*, 10, Auto">
         <Grid Grid.Row="0" VerticalAlignment="Center">
-            <m:NumericUpDown Value="{Binding Line.Value, Mode=TwoWay}" Minimum="1" Maximum="{Binding MaxLine.Value, Mode=OneWay}" m:TextBoxHelper.Watermark="{le:Loc Label_LineMumber}" m:TextBoxHelper.UseFloatingWatermark="True"/>
+            <m:NumericUpDown x:Name="Line" Value="{Binding Line.Value, Mode=TwoWay}" Minimum="1" Maximum="{Binding MaxLine.Value, Mode=OneWay}" m:TextBoxHelper.Watermark="{le:Loc Label_LineMumber}" m:TextBoxHelper.UseFloatingWatermark="True" m:TextBoxHelper.SelectAllOnFocus="True"/>
         </Grid>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="{le:Loc Command_OK}"     Command="{Binding OKCommand, Mode=Onetime}"/>
