--- a/MyPad/Views/Dialogs/SelectDiffFilesDialog.xaml
+++ b/MyPad/Views/Dialogs/SelectDiffFilesDialog.xaml
@@ -12,7 +12,8 @@
              xmlns:ge="clr-namespace:SourceChord.GridExtra;assembly=GridExtra.Wpf"
              xmlns:behaviors="clr-namespace:MyPad.Views.Behaviors"
              mc:Ignorable="d"
-             p:ViewModelLocator.AutoWireViewModel="True">
+             p:ViewModelLocator.AutoWireViewModel="True"
+             Loaded="Dialog_Loaded">
 
     <p:Dialog.WindowStyle>
         <Style TargetType="{x:Type m:MetroWindow}" BasedOn="{StaticResource App.Dialog}">
@@ -21,6 +22,9 @@
     </p:Dialog.WindowStyle>
 
     <i:Interaction.Triggers>
+        <i:KeyTrigger Key="Enter">
+            <i:InvokeCommandAction Command="{Binding OKCommand, Mode=OneTime}"/>
+        </i:KeyTrigger>
         <i:KeyTrigger Key="Esc">
             <i:InvokeCommandAction Command="{Binding CancelCommand, Mode=OneTime}"/>
         </i:KeyTrigger>
@@ -28,7 +32,7 @@
 
     <Grid Margin="20 10 20 15" ge:GridEx.RowDefinition="*, 10, Auto">
         <Grid Grid.Row="0" ge:GridEx.ColumnDefinition="*, 15, *" VerticalAlignment="Center">
-            <ComboBox Grid.Column="0" ItemsSource="{Binding FileNames, Mode=OneWay}" SelectedValue="{Binding DiffSourcePath.Value, Mode=TwoWay}" m:TextBoxHelper.Watermark="{le:Loc Label_DiffSource}" m:TextBoxHelper.UseFloatingWatermark="True">
+            <ComboBox Grid.Column="0" x:Name="DiffSourcePath" ItemsSource="{Binding FileNames, Mode=OneWay}" SelectedValue="{Binding DiffSourcePath.Value, Mode=TwoWay}" m:TextBoxHelper.Watermark="{le:Loc Label_DiffSource}" m:TextBoxHelper.UseFloatingWatermark="True">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{qc:Binding 'Path.GetFileName($P)', P={Binding Mode=OneWay}}"/>
