--- a/MyPad/Views/Regions/DiffContentView.xaml
+++ b/MyPad/Views/Regions/DiffContentView.xaml
@@ -16,13 +16,14 @@
              d:DesignHeight="450" d:DesignWidth="800"
              IsVisibleChanged="UserControl_IsVisibleChanged">
 
-    <Grid Margin="20 0 20 20">
+    <Grid Margin="20 0 20 20" ge:GridEx.RowDefinition="*, 5, Auto">
         <dp:DiffViewer x:Name="DiffViewer"
                        OldText="{Binding DiffSource.Value.Document.Text, Mode=OneWay}"
                        NewText="{Binding DiffDestination.Value.Document.Text, Mode=OneWay}"
                        OldTextHeader="{qc:MultiBinding 'Path.GetDirectoryName($P0) == Path.GetDirectoryName($P1) ? Path.GetFileName($P0) : $P0', P0={Binding DiffSource.Value.FileName, Mode=OneWay}, P1={Binding DiffDestination.Value.FileName, Mode=OneWay}}"
                        NewTextHeader="{qc:MultiBinding 'Path.GetDirectoryName($P0) == Path.GetDirectoryName($P1) ? Path.GetFileName($P1) : $P1', P0={Binding DiffSource.Value.FileName, Mode=OneWay}, P1={Binding DiffDestination.Value.FileName, Mode=OneWay}}"
                        Opacity="{qc:MultiBinding '$P0 == $P1 ? 0.2 : 1.0', P0={Binding DiffSource.Value.Document.Text, Mode=OneWay}, P1={Binding DiffDestination.Value.Document.Text, Mode=OneWay}}"/>
+        
         <Grid Visibility="{qc:MultiBinding '$P0 == $P1 ? Visibility.Visible : Visibility.Collapsed', P0={Binding DiffSource.Value.Document.Text, Mode=OneWay}, P1={Binding DiffDestination.Value.Document.Text, Mode=OneWay}}">
             <Border d:IsHidden="True" Style="{StaticResource App.Overlay}">
                 <StackPanel Margin="5 0" HorizontalAlignment="Stretch" VerticalAlignment="Center">
@@ -30,6 +31,10 @@
                 </StackPanel>
             </Border>
         </Grid>
+
+        <CheckBox Grid.Row="2" HorizontalAlignment="Right"
+                  IsChecked="{Binding SettingsService.System.ShowInlineDiffViewer, Mode=TwoWay}" Content="{le:Loc LabelText_ShowInlineDiffViewer}"
+                  Checked="ShowInlineDiffViewer_Checked" Unchecked="ShowInlineDiffViewer_Unchecked"/>
     </Grid>
     
 </UserControl>
