--- a/MyPad/Views/Styles/Controls/AvalonEdit.xaml
+++ b/MyPad/Views/Styles/Controls/AvalonEdit.xaml
@@ -10,7 +10,7 @@
                     xmlns:controls="clr-namespace:MyPad.Views.Controls">
 
     <Style x:Key="Default.TextView" TargetType="{x:Type ae:TextView}">
-        <!-- MEMO: ColumnRulerPen は設定できない -->
+        <!-- NOTE: ColumnRulerPen は設定できない -->
         <Setter Property="LinkTextForegroundBrush" Value="{DynamicResource MahApps.Brushes.AccentBase}"/>
         <Setter Property="NonPrintableCharacterBrush" Value="{DynamicResource MahApps.Brushes.Gray2}"/>
         <Setter Property="CurrentLineBackground" Value="{DynamicResource MahApps.Brushes.Accent4}"/>
@@ -53,7 +53,7 @@
     </Style>
 
     <Style x:Key="Default.SearchPanel" TargetType="{x:Type ae:SearchPanel}">
-         <!-- MEMO: MarkerBrush は設定できない -->
+         <!-- NOTE: MarkerBrush は設定できない -->
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
