--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -527,9 +527,9 @@
                                                   InputGestureText="Ctrl+Shift+End"/>
                                     </MenuItem>
                                     <MenuItem Header="{le:Loc Command_Formatting}">
-                                        <MenuItem Command="controls:TextEditorCommands.ConvertToNarrow"
+                                        <MenuItem Command="controls:TextArea+Commands.ConvertToNarrow"
                                                   Header="{le:Loc Command_ConvertToNarrow}"/>
-                                        <MenuItem Command="controls:TextEditorCommands.ConvertToWide"
+                                        <MenuItem Command="controls:TextArea+Commands.ConvertToWide"
                                                   Header="{le:Loc Command_ConvertToWide}"/>
                                         <Separator/>
                                         <MenuItem Command="ae:AvalonEditCommands.ConvertToLowercase"
